# rusty_rolodex

./: .env  .gitignore  Cargo.toml  README.md  another_contacts.json  contacts.csv  contacts.json  contacts.txt
.github/workflow/: rust_ci.yml
.github/workflows/: release.yml  rust_ci.yml
api/: Cargo.toml
api/src/: main.rs
benches/: contacts_bench.rs  fuzzy_bench.rs
cli/: Cargo.toml
cli/benches/: contacts_bench.rs  fuzzy_bench.rs
cli/src/: cli.rs  domain.rs  main.rs  prelude.rs  traits.rs  validation.rs
cli/src/store/: mem.rs
core/: Cargo.toml
core/src/: domain.rs  error.rs  helpers.rs  lib.rs  store.rs
core/tests/: sync_merge_test.rs
core_1/: Cargo.toml
core_1/src/: domain.rs  main.rs
docs/: CHANGELOG.md  USAGE.md  Walkthrough.md  mobile-workflow.md  perf-notes.md
examples/: add.rs  delete.rs  list.rs
src/: cli.rs  domain.rs  lib.rs  main.rs  traits.rs  validation.rs
src/api/: main.rs
src/cli/: main.rs
src/core/: domain.rs
src/store/: mem.rs
tests/: cli.rs  sync.rs
