[package]
name = "rusty_rolodex"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
chrono = {version = "0.4.42", features = ["serde"]}
csv = "1.3.1"
fuzzy-search = "0.1"

[[bin]]
name = "rolodex"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "contacts_bench"
harness = false
