[package]
name = "rusty_rolodex"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
chrono = {version = "0.4.42", features = ["serde"]}
csv = "1.3.1"
fuzzy-search = "0.1"
reqwest = {version= "0.12.24", features = ["blocking", "json"]}
dotenv = "0.15.0"
axum = {version= "0.8.7", features = ["macros"]}
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "rolodex"
path = "src/cli/main.rs"

[[bin]]
name = "rolodex-api"
path = "src/api/main.rs"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"
criterion = "0.5"

[dependencies.uuid]
version = "1.18.1"
# Lets you generate random UUIDs
features = [
    "v4",
]

[[bench]]
name = "fuzzy_bench"
harness = false
